--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     <title>Twimba - Twitter clone App</title>
 </head>
 <body>
+    <header>
+		<h1>Twimba</h1>
+	</header>
+	<main>
+		<div class="tweet-input-area">
+			<img src="images/scrimbalogo.png" class="profile-pic">
+		</div>
+		<button id="tweet-btn">Tweet</button>
+		<div class="feed" id="feed"></div>
+	</main>
     
     <script src="script.js"></script>
 </body>
